# ffitest

./: CMakeLists.txt  README.md
.github/workflows/: build_linux.yml  build_win.yml
src/: CMakeLists.txt
